# D7S-Channel-Strip-FULL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos-build.yml
Assets/FactoryPresets/: Acoustic_Guitar_Natural.d7spreset  Drum Bus Glue.d7spreset  Master Glue Sutil.d7spreset  Vocal Pop Clean.d7spreset  Vocal Rap Aggressive.d7spreset
Checkpoints/: analyzer-before-refine-2026-06-11.md  pre-tier3.md
Docs/: tier3-analyzer-contrast-audit.md  tier3-analyzer-defaults-audit.md  tier3-analyzer-tilt-audit.md  tier3-build-test-checkpoint.md  tier3-clipper-integration-audit.md  tier3-final-audit.md  tier4-analyzer-background-thread.md  tier4-clipper-fsc-rewrite-audit.md  tier4-clipper-fsc-rewrite.md  tier4-codesign-ci.md  tier4-complete.md  tier4-cpu-optimization-pass.md  tier4-delay-mode-params-audit.md  tier4-factory-presets.md  tier4-opengl-context-note.md  tier4-preset-header-ui.md  tier4-state-versioning.md  tier4-tooltips-map.md  tier4-tube-bias-drift-audit.md
Scripts/: install_d7s.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor_Tier1.cpp
Source/Core/: AnalyzerState.h  IModule.h  ModuleChain.cpp  ModuleChain.h  ModuleState.h  ModuleType.h  ParameterLayout.cpp  PresetManager.cpp  PresetManager.h  RackManager.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  temp.txt
Source/Modules/: ClipperProcessor.cpp  ClipperProcessor.h  Comp2AProcessor.cpp  Comp2AProcessor.h  Comp76Processor.cpp  Comp76Processor.h  DelayGlideProcessor.cpp  DelayGlideProcessor.h  EQ4KProcessor.cpp  EQ4KProcessor.h  EsserProcessor.cpp  EsserProcessor.h  NoiseGT1Processor.cpp  NoiseGT1Processor.h  TubeProcessor.cpp  TubeProcessor.h
Source/UI/: RackModuleComponent.h  SpectrumAnalyzerComponent.cpp  SpectrumAnalyzerComponent.h  SpectrumDisplay.cpp  SpectrumDisplay.h
Tests/: analyzer_sub_frequency_visibility_test.md  clipper_fft_harmonics_test.md  clipper_fsc_null_test_plan.md  comp2a_cla2a_null_test_plan.md  comp76_cla76_null_test_plan.md  delay_tape_pitch_transition_test.md  pluginval_multisamplerate_strictness10.md
